--- a/src/App.css
+++ b/src/App.css
@@ -623,3 +623,11 @@
     color: #6bbab2;
     text-align: right;
 }
+
+.preview-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
